--- a/editor-components/e-commerce/e-commerce2/e-commerce2.module.scss
+++ b/editor-components/e-commerce/e-commerce2/e-commerce2.module.scss
@@ -163,6 +163,7 @@
             animation-duration: 0.5s;
             text-align: center;
             width: fit-content;
+            line-height: 2rem !important;
           }
         }
       }
