--- a/editor-components/e-commerce/e-commerce6/e-commerce6.module.scss
+++ b/editor-components/e-commerce/e-commerce6/e-commerce6.module.scss
@@ -48,6 +48,11 @@
                     padding: var(--composer-gap-md);
                     background-color: var(--composer-primary-color);
                     color: var(--composer-font-color-secondary);
+                    height: 100%;
+
+                    >svg{
+                        height: 100%;
+                    }
                 }
 
                 &::before {
